--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,36 @@
 <html lang="ko">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
             content="Web site created using create-react-app"
         />
-        <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+        <script>
+            const goLink =
+                "https://support.microsoft.com/ko-kr/topic/%EC%9D%B4-%EC%9B%B9-%EC%82%AC%EC%9D%B4%ED%8A%B8%EB%8A%94-microsoft-edge%EC%97%90%EC%84%9C-%EB%8D%94-%EC%9E%98-%EC%9E%91%EB%8F%99%ED%95%A9%EB%8B%88%EB%8B%A4-160fa918-d581-4932-9e4e-1075c4713595?ui=ko-kr&rs=ko-kr&ad=kr";
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+            if (navigator.userAgent.indexOf("Trident") > 0) {
+                window.location = "microsoft-edge:" + window.location.href;
+                setTimeout(function () {
+                    window.location = goLink;
+                }, 100);
+            } else if (/MSIE \d |Trident.*rv:/.test(navigator.userAgent)) {
+                window.location = "microsoft-edge:" + window.location.href;
+                setTimeout(function () {
+                    window.location = goLink;
+                }, 100);
+            }
+        </script>
+
+        <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>MM</title>
         <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    </body>
 </html>
